viv-fb: Include gstglfuncs.h to fix cross compilation errors

https://bugzilla.gnome.org/show_bug.cgi?id=794589